--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "optolith-discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:watch": "tsc -w",
+    "start": "node dist/main.js"
   },
   "repository": {
     "type": "git",
