--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
   ],
   "compilerOptions": {
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": false,
     "alwaysStrict": true,
     "checkJs": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noErrorTruncation": true,
     "noFallthroughCasesInSwitch": true,
@@ -26,6 +26,7 @@
       "dom",
       "dom.iterable",
       "esnext"
-    ]
+    ],
+    "skipLibCheck": true,
   }
 }
