--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/elyukai/optolith-discord-bot#readme",
   "devDependencies": {
+    "@types/node": "12.12.14",
     "typescript": "3.7.2"
   },
   "dependencies": {
